changed css to attempt to prevent projects getting clipped on mobile

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -49,6 +49,8 @@
     @media screen and (max-width: 600px) {
         .projects-container {
             flex-direction: column;
+            margin-bottom: 10vh;
+            gap: 1rem;
         }
         .project {
             width: 50vw;
